@@ -570,12 +570,15 @@ bool NodeImpl::dispatchGenericEvent( EventImpl *evt, int &/*exceptioncode */)
     evt->setEventPhase(0); // I guess this is correct, the spec does not seem to say
                            // anything about the default event handler phase.
 
-    // now we call all default event handlers (this is not part of DOM - it is internal to khtml)
 
-    it.toLast();
-    for (; it.current() && !evt->propagationStopped() && !evt->defaultPrevented() && !evt->defaultHandled(); --it)
-	it.current()->defaultEventHandler(evt);
+    if (evt->bubbles()) {
+	// now we call all default event handlers (this is not part of DOM - it is internal to khtml)
 
+	it.toLast();
+	for (; it.current() && !evt->propagationStopped() && !evt->defaultPrevented() && !evt->defaultHandled(); --it)
+	    it.current()->defaultEventHandler(evt);
+    }
+    
     // In the case of a mouse click, also send a DOMActivate event, which causes things like form submissions
     // to occur. Note that this only happens for _real_ mouse clicks (for which we get a KHTML_CLICK_EVENT or
     // KHTML_DBLCLICK_EVENT), not the standard DOM "click" event that could be sent from js code.
